--- a/react-app/static/index.html
+++ b/react-app/static/index.html
@@ -29,7 +29,7 @@
       </div>
     </div>
   </header>
-  <div class="product-list"></div>
+  <!-- <div class="product-list"></div> -->
   <div class="product-detail"></div>
 </body>
 
