--- a/head.html
+++ b/head.html
@@ -3,3 +3,4 @@
 <script src="/scripts/scripts.js" type="module"></script>
 <script src="/scripts/vendor.js" type="module"></script>
 <link rel="stylesheet" href="/styles/styles.css"/>
+<link rel="preconnect" href="https://venia.magento.com">
