cart component added

--- a/react-app/static/index.html
+++ b/react-app/static/index.html
@@ -13,7 +13,7 @@
         <div></div>
       </div>
       <div class="nav-wrapper">
-        <nav id="nav" aria-expanded="true"><div class="nav-hamburger"><button type="button" aria-controls="nav" aria-label="Close navigation">
+        <nav id="nav" aria-expanded="false"><div class="nav-hamburger"><button type="button" aria-controls="nav" aria-label="Close navigation">
           <span class="nav-hamburger-icon"></span>
         </button></div><div class="section nav-brand" data-section-status="loaded" style="">
       
@@ -30,7 +30,8 @@
     </div>
   </header>
   <!-- <div class="product-list"></div> -->
-  <div class="product-detail"></div>
+  <!-- <div class="product-detail"></div> -->
+  <div class="cart"></div>
 </body>
 
 </html>
