--- a/react-app/static/index.html
+++ b/react-app/static/index.html
@@ -32,6 +32,7 @@
   <!-- <div class="product-list"></div> -->
   <!-- <div class="product-detail"></div> -->
   <div class="cart"></div>
+  <div class="checkout"></div>
 </body>
 
 </html>
