--- a/head.html
+++ b/head.html
@@ -1,6 +1,22 @@
-<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <script src="/scripts/aem.js" type="module"></script>
 <script src="/scripts/scripts.js" type="module"></script>
 <script src="/scripts/vendor.js" type="module"></script>
-<link rel="stylesheet" href="/styles/styles.css"/>
-<link rel="preconnect" href="https://venia.magento.com">
+<link rel="stylesheet" href="/styles/styles.css" />
+<link rel="preconnect" href="https://venia.magento.com" />
+<script type="speculationrules">
+  {
+    "prerender": [
+      {
+        "source": "document",
+        "where": {
+          "and": [
+            { "href_matches": "/*" },
+            { "not": { "href_matches": "/not-safe-to-prerender/*" } }
+          ]
+        },
+        "eagerness": "moderate"
+      }
+    ]
+  }
+</script>
