--- a/react-app/static/categories.html
+++ b/react-app/static/categories.html
@@ -30,10 +30,7 @@
       </div>
     </div>
   </header>
-  <!-- <div class="product-list"></div> -->
-  <!-- <div class="product-detail"></div> -->
-  <!-- <div class="cart"></div>
-  <div class="checkout"></div> -->
+  <div class="product-list"></div>
 </body>
 
 </html>
