--- a/react-app/static/checkout.html
+++ b/react-app/static/checkout.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <title>Webpack with react</title>
-  <meta name="preload" content="/icons/img-placeholder.jpg">
+  <meta name="preload" content="https://main--venia-store--iamkumaran.hlx.live/icons/img-placeholder.jpg">
 </head>
 
 <body class="appear">
