--- a/react-app/static/index.html
+++ b/react-app/static/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Webpack with react</title>
-  <meta name="preload" content="/icons/img-placeholder.jpg">
+  <meta name="preload" content="https://main--venia-store--iamkumaran.hlx.live/icons/img-placeholder.jpg">
 </head>
 
 <body class="appear">
